--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,3 +1,6 @@
 $defaultFont: #fff;
 $subtleBg: rgb(44, 62, 80);
-$primary: #74d1f6;
+$grey: #90a4ae;
+$greenBlue: rgb(0, 198, 167);
+$blue: rgb(30, 77, 146);
+$gradient: linear-gradient(57deg, $greenBlue 0%, $blue 100%);
