--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,9 @@
+$fontSize: 2em;
+
+// Colors
 $defaultFont: #fff;
 $subtleBg: rgb(44, 62, 80);
 $grey: #90a4ae;
 $greenBlue: rgb(0, 198, 167);
-$blue: rgb(30, 77, 146);
+$blue: rgb(0, 77, 146);
 $gradient: linear-gradient(57deg, $greenBlue 0%, $blue 100%);
