--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,7 @@
-@import 'colors.scss';
+@import 'variables.scss';
 @import 'global.scss';
 
+@import 'wave.scss';
 @import 'gradient.scss';
 @import 'textBorder.scss';
+@import 'underline.scss';
