--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -3,7 +3,7 @@
 *:after {
     margin: 0;
     padding: 0;
-    box-sizing: inherit;
+    box-sizing: border-box;
 }
 
 html {
@@ -19,10 +19,6 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-    color: #fff;
-}
-
 p {
     margin: 2rem 0;
     line-height: 1.4em;
@@ -34,29 +30,39 @@ p {
 
 h1,
 h2 {
-    margin-bottom: 4rem;
+    margin-bottom: 0.8em;
     max-width: 100%;
     line-height: 1.1em;
+}
+
+h1 {
+    text-decoration: underline;
+}
+
+h2 {
+    font-weight: light;
+    font-size: 18px;
 }
 
 .center {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: space-between;
     justify-content: center;
-
-    h1 {
-        text-align: center;
-    }
+    max-width: 1024px;
+    margin: 0 auto;
 }
 
 a {
-    font-size: 36px;
+    color: #fff;
+    font-size: $fontSize;
     font-weight: bold;
 }
 
 .demos {
     display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
 
     > * {
         margin-right: 50px;
@@ -73,10 +79,31 @@ a {
 }
 
 .full-sized {
-    height: 100vh;
+    min-height: 100vh;
+    height: 100%;
     width: 100%;
+}
 
-    img {
-        max-width: 200px;
+.github-link {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+
+    svg {
+        fill: rgba(255,255,255,0.75);
+        width: auto;
+
+        &:hover {
+            fill: #fff;
+        }
+    }
+
+    span {
+        clip: rect(1px, 1px, 1px, 1px);
+        position: absolute;
+        height: 1px;
+        width: 1px;
+        overflow: hidden;
+        word-wrap: normal;
     }
 }
