--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,4 +4,6 @@
 @import 'wave.scss';
 @import 'gradient.scss';
 @import 'textBorder.scss';
-@import 'underline.scss';
+@import 'curvy.scss';
+@import 'stripes.scss';
+@import 'stripes2.scss';
