--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -37,11 +37,39 @@ h2 {
 
 h1 {
     text-decoration: underline;
+
+    @media (max-width: 800px) {
+        font-size: 1.5em;
+        margin-bottom: 2em;
+    }
+
+    @media (max-width: 768px) {
+        text-align: center;
+    }
+
+    @media (max-width: 600px) {
+        font-size: 1.2em;
+    }
+}
+
+h2, h2 a {
+    font-weight: light;
+    font-size: 18px;
 }
 
 h2 {
-    font-weight: light;
-    font-size: 18px;
+    display: inline-flex;
+    justify-content: space-between;
+}
+
+h2 a {
+    color: $linkColor;
+    text-decoration: none;
+
+    &:hover {
+        color: $linkHoverColor;
+        text-decoration: underline;
+    }
 }
 
 .center {
@@ -49,8 +77,9 @@ h2 {
     flex-direction: column;
     align-items: space-between;
     justify-content: center;
-    max-width: 1024px;
+    max-width: 900px;
     margin: 0 auto;
+    padding: 50px;
 }
 
 a {
@@ -58,6 +87,10 @@ a {
     font-size: $fontSize;
     font-weight: bold;
     text-decoration: none;
+
+    @media (max-width: 600px) {
+        font-size: $fontSizeSmall;
+    }
 }
 
 .demos {
@@ -72,11 +105,24 @@ a {
             margin-right: 0;
         }
     }
+
+    @media (max-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;;
+        margin-bottom: 0;
+        > * { margin-right: 0; }
+    }
 }
 
 .demo {
     display: flex;
     flex-direction: column;
+
+    @media (max-width: 768px) {
+        margin-bottom: 50px;
+        max-width: 275px;
+    }
 }
 
 .full-sized {
@@ -86,17 +132,22 @@ a {
 }
 
 .github-link {
-    position: absolute;
-    right: 20px;
-    top: 20px;
+    font-size: 1em;
+    color: $linkColor;
+    text-decoration: none;
+    display: inline-flex;
+    align-items: center;
+    margin-left: 0.2em;
+
+    &:hover {
+        color: $linkHoverColor;
+        svg { fill: $linkHoverColor; }
+    }
 
     svg {
-        fill: rgba(255,255,255,0.75);
-        width: auto;
-
-        &:hover {
-            fill: #fff;
-        }
+        fill: $linkColor;
+        width: 1em;
+        height: 0.8em;
     }
 
     span {
